added HTML structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
+      </div>
+      <small>
+        <a
+          href="https://github.com/Ksu2612/Weather-App-Vanilla"
+          target="_blank"
+        >
+          Open-source code
+        </a>
+        by Ksu Royz
+      </small>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
