--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         </small>
       </div>
     </div>
-    <script src="src/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
