--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Friday 5:00</li>
+              <li id="date"></li>
               <li id="description"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img
-                  src="	https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="clear"
-                  id="icon"
-                />
+                <img src="" alt="clear" id="icon" />
                 <div>
                   <strong id="temperature"></strong>
                   <span class="units">℃| <a href="#">℉</a></span>
